Add automated tests

--- a/notebooks/Units.ipynb
+++ b/notebooks/Units.ipynb
@@ -163,7 +163,7 @@
    "source": [
     "from openmm import app\n",
     "\n",
-    "positions = app.PDBFile(\"pdb/MainChain_ALA.pdb\").getPositions()\n",
+    "positions = app.PDBFile(\"../pdb/MainChain_ALA.pdb\").getPositions()\n",
     "type(positions), positions"
    ]
   },
