Fix tests, clean up directory structure

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -17,6 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List, Tuple\n",
+    "\n",
     "from openff.interchange import Interchange\n",
     "from openff.toolkit import ForceField, Molecule\n",
     "\n",
