--- a/notebooks/objectives.ipynb
+++ b/notebooks/objectives.ipynb
@@ -18,34 +18,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "990c978f",
+   "id": "ebeb8092",
    "metadata": {},
    "source": [
-    "![title](img/flowchart.jpg)"
+    "![text](img/flowchart.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b80c7e6b",
+   "id": "889a512c",
    "metadata": {},
-   "source": [
-    "Our topics include:\n",
-    "* Summarizing the key objectives and current scope of Interchange\n",
-    "* Demonstrating how to use its high-level API points\n",
-    "* Highlight key (current) functionality\n",
-    "* (Time-permitting) preview some experimental features\n",
-    "\n",
-    "Other notebooks we will be going through today:\n",
-    "* `Units.ipynb`: Using unit-wrapped quantities used throughout the OpenFF software stack\n",
-    "* `Construction.ipynb`: Creating `Interchange` objects\n",
-    "* `Inspection.ipynb`: Inspecting (most of) the contents of `Interchange` objects\n",
-    "* `Exports.ipynb`: Exporting `Interchange` objects to molecular simulation engines\n",
-    "* `Exploration.ipynb`: Inspecting potential handlers directly\n",
-    "\n",
-    "Examples we will be going through:\n",
-    "* Protein-ligand\n",
-    "* Virtual sites"
-   ]
+   "source": []
   }
  ],
  "metadata": {
