--- a/notebooks/units.ipynb
+++ b/notebooks/units.ipynb
@@ -22,6 +22,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15b4a873",
+   "metadata": {},
+   "source": [
+    "As a shorthand, you can create `Quantity` objects by multiplying numerical objects (int, float, `numpy.ndarray`, etc.) by a `unit.Unit` object, i.e.:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fd597e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value1 = unit.Quantity(0.8, unit.kilocalorie_per_mole)\n",
+    "value2 = 0.8 * unit.kilocalorie_per_mole\n",
+    "\n",
+    "assert value1 == value2\n",
+    "\n",
+    "value1, value2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d0f404dc",
@@ -217,7 +240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('interchange-workshop')",
    "language": "python",
    "name": "python3"
   },
@@ -232,6 +255,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ec854787c9f145fd63cdd57e780479696460a9ad39dc2aba16d4b713544fa933"
+   }
   }
  },
  "nbformat": 4,
