Add virtual site notebook, fix others

--- a/notebooks/construction.ipynb
+++ b/notebooks/construction.ipynb
@@ -37,7 +37,7 @@
    "id": "d5d79a6d",
    "metadata": {},
    "source": [
-    "`Molecule` objects in the OpenFF Toolkit are rich descrptions of chemistry akin to cheminformatics representations  found in RDKit and OpenEye Toolkits. This is distinct from most molecule mechanics use cases in which coordinates, elements, and bonds are sufficient. The preferred starting point for small molecules is something like an SDF file or a SMILES pattern. (Later, we'll look at how the toolkit can load proteins from PDB files.) For starters, let's generate an ethanol molecule and corresponding topology."
+    "`Molecule` objects in the OpenFF Toolkit are rich descrptions of chemistry akin to cheminformatics representations  found in RDKit and OpenEye Toolkits. This is distinct from most molecule mechanics use cases in which coordinates, elements, and bonds are sufficient. The preferred starting point for small molecules is something like an SDF file or a SMILES pattern. (Later, we'll look at how the toolkit can load proteins from PDB files.) For starters, let's generate a molecule and corresponding topology."
    ]
   },
   {
@@ -276,7 +276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('openff-interchange-env')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
