--- a/notebooks/exports.ipynb
+++ b/notebooks/exports.ipynb
@@ -5,7 +5,7 @@
    "id": "e4556e2f",
    "metadata": {},
    "source": [
-    "An `Interchange` object provides several methods to produce input data for other software. Note that none of these methods aim to export _all_ stored information. INstead, they support a design where the principle source of truth is the rich chemical information in the Interchange object and each export method provides only what the file or object needs.\n",
+    "An `Interchange` object provides several methods to produce input data for other software. Note that none of these methods aim to export _all_ stored information. Instead, they support a design where the principle source of truth is the rich chemical information in the Interchange object and each export method provides only what the file or object needs.\n",
     "\n",
     "For starters, let's create a single-molecule `Interchange` just like we did in the `Construction.ipynb` notebook."
    ]
