--- a/notebooks/units.ipynb
+++ b/notebooks/units.ipynb
@@ -221,8 +221,8 @@
     "\n",
     "assert Version(__version__) >= Version(\"0.11\")\n",
     "\n",
-    "hexanol = Molecule.from_smiles(\"c1ccc(Br)cc1Cl\")\n",
-    "hexanol"
+    "molecule = Molecule.from_smiles(\"c1ccc(Br)cc1Cl\")\n",
+    "molecule"
    ]
   },
   {
@@ -232,15 +232,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hexanol.generate_conformers(n_conformers=1)\n",
-    "hexanol.assign_partial_charges(partial_charge_method=\"am1bcc\")\n",
-    "type(hexanol.conformers[0]), type(hexanol.partial_charges)"
+    "molecule.generate_conformers(n_conformers=1)\n",
+    "molecule.assign_partial_charges(partial_charge_method=\"am1bcc\")\n",
+    "type(molecule.conformers[0]), type(molecule.partial_charges)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('interchange-workshop')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
