--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "    rdmol: RDMol = molecule_copy.to_rdkit()\n",
     "    for atom in rdmol.GetAtoms():\n",
-    "        atom.SetAtomMapNum(atom.GetIdx())\n",
+    "        atom.SetAtomMapNum(atom.GetIdx() + 1)\n",
     "\n",
     "    return rdmol\n",
     "\n",
@@ -297,7 +297,7 @@
     "    potential_key = bond_handler.slot_map[topology_key]\n",
     "    potential = bond_handler.potentials[potential_key]\n",
     "\n",
-    "    return potential.parameters[\"length\"]\n",
+    "    return potential.id, potential.parameters[\"length\"]\n",
     "\n",
     "\n",
     "get_r(interchange, (0, 1)), get_r(interchange, (5, 6))"
@@ -319,13 +319,13 @@
    "outputs": [],
    "source": [
     "def get_k(interchange: Interchange, atom_indices: tuple[int]):\n",
-    "    bond_handler = interchange[\"ProperTorsions\"]\n",
+    "    dihedral_handler = interchange[\"ProperTorsions\"]\n",
     "\n",
     "    topology_key = TopologyKey(atom_indices=atom_indices, mult=0)\n",
-    "    potential_key = bond_handler.slot_map[topology_key]\n",
-    "    potential = bond_handler.potentials[potential_key]\n",
+    "    potential_key = dihedral_handler.slot_map[topology_key]\n",
+    "    potential = dihedral_handler.potentials[potential_key]\n",
     "\n",
-    "    return potential.parameters[\"k\"]\n",
+    "    return potential.id, potential.parameters[\"k\"]\n",
     "\n",
     "\n",
     "get_k(interchange, (0, 1, 2, 3)), get_k(interchange, (0, 5, 6, 7))"
