Fix exploration notebook

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -297,7 +297,7 @@
     "    potential_key = bond_handler.slot_map[topology_key]\n",
     "    potential = bond_handler.potentials[potential_key]\n",
     "\n",
-    "    return potential.id, potential.parameters[\"length\"]\n",
+    "    return potential_key.id, potential.parameters[\"length\"]\n",
     "\n",
     "\n",
     "get_r(interchange, (0, 1)), get_r(interchange, (5, 6))"
@@ -325,7 +325,7 @@
     "    potential_key = dihedral_handler.slot_map[topology_key]\n",
     "    potential = dihedral_handler.potentials[potential_key]\n",
     "\n",
-    "    return potential.id, potential.parameters[\"k\"]\n",
+    "    return potential_key.id, potential.parameters[\"k\"]\n",
     "\n",
     "\n",
     "get_k(interchange, (0, 1, 2, 3)), get_k(interchange, (0, 5, 6, 7))"
