Add workshop updates

--- a/notebooks/construction.ipynb
+++ b/notebooks/construction.ipynb
@@ -130,7 +130,7 @@
    "outputs": [],
    "source": [
     "interchange2 = sage.create_interchange(topology)\n",
-    "interchange2"
+    "interchange2.to_openmm(combine_nonbonded_forces=True)"
    ]
   },
   {
