--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -64,6 +64,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c46d4e04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "molecule"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f1818588",
    "metadata": {},
@@ -290,17 +300,17 @@
     "from openff.interchange.models import PotentialKey, TopologyKey\n",
     "\n",
     "\n",
-    "def get_r(interchange: Interchange, atom_indices: tuple[int]):\n",
+    "def get_k(interchange: Interchange, atom_indices: tuple[int]):\n",
     "    bond_handler = interchange[\"Bonds\"]\n",
     "\n",
     "    topology_key = TopologyKey(atom_indices=atom_indices)\n",
     "    potential_key = bond_handler.slot_map[topology_key]\n",
     "    potential = bond_handler.potentials[potential_key]\n",
     "\n",
-    "    return potential_key.id, potential.parameters[\"length\"]\n",
+    "    return potential_key.id, potential.parameters[\"k\"]\n",
     "\n",
     "\n",
-    "get_r(interchange, (0, 1)), get_r(interchange, (5, 6))"
+    "get_k(interchange, (0, 1)), get_k(interchange, (5, 6))"
    ]
   },
   {
