--- a/notebooks/exports.ipynb
+++ b/notebooks/exports.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "sage = ForceField(\"openff-2.0.0.offxml\")\n",
     "\n",
-    "interchange = Interchange.from_smirnoff(sage, molecule.to_topology())"
+    "interchange = Interchange.from_smirnoff(sage, [molecule])"
    ]
   },
   {
@@ -208,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interchange[\"Bonds\"].get_system_parameters()"
+    "interchange[\"ProperTorsions\"].get_system_parameters()"
    ]
   },
   {
