--- a/notebooks/units.ipynb
+++ b/notebooks/units.ipynb
@@ -236,6 +236,37 @@
     "molecule.assign_partial_charges(partial_charge_method=\"am1bcc\")\n",
     "type(molecule.conformers[0]), type(molecule.partial_charges)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a46bc64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "molecule.conformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "574470f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openff.units import unit\n",
+    "from openmm import unit as openmm_unit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "468ea55f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openmm_unit.angstrom * 1.2"
+   ]
   }
  ],
  "metadata": {
