--- a/notebooks/virtual_sites.ipynb
+++ b/notebooks/virtual_sites.ipynb
@@ -296,6 +296,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ForceField(\"openff-1.0.0.offxml\")[\"LibraryCharges\"].parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "force_field_tip4p[\"LibraryCharges\"].parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "force_field_tip4p[\"VirtualSites\"].parameters[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy\n",
     "from openff.evaluator.utils.packmol import pack_box\n",
     "\n",
@@ -345,6 +372,22 @@
     "    force_field=force_field_tip4p,\n",
     "    topology=topology,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Interchange.from_smirnoff(\n",
+    "    force_field=ForceField(\n",
+    "        get_test_file_path(\"tip4p.offxml\"),\n",
+    "        \"openff_unconstrained-2.0.0.offxml\",\n",
+    "        vsite_offxml,\n",
+    "    ),\n",
+    "    topology=topology,\n",
+    ")[\"VirtualSites\"].slot_map"
    ]
   },
   {
